# ChangeLog for net-www/xxv
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/xxv/ChangeLog,v 1.1 2007/11/11 13:46:30 hd_brummy Exp $

*xxv-1.0 (11 Nov 2007)

  11 Nov 2007; Joerg Bornkessel <hd_brummy@gentoo.org>
  +files/xxv-1.0-logerror.patch, +files/xxvd-1.0.cfg, +files/xxv,
  +files/xxvd-logrotate, +metadata.xml, +xxv-1.0.ebuild:
  initial ebuild; find older versions on overlay vdr-testing
