@@ -17,15 +17,20 @@ AUX xxvd-logrotate 477 RMD160 cf179b200bca2ba165550530c5a4dc6e3e01838f SHA1 c761
 MD5 ec839ca437e6a294d800e480619446cf files/xxvd-logrotate 477
 RMD160 cf179b200bca2ba165550530c5a4dc6e3e01838f files/xxvd-logrotate 477
 SHA256 3f4aa0de2dd635532df74ad60074724f2dce62a7a716824dac0cdb228d868d95 files/xxvd-logrotate 477
+DIST xxv-1.0.1.tgz 920320 RMD160 fa71db154cb9d185e6175f21d4e2ad3fa1747cd6 SHA1 b58e81e218e47e99e9fddbdeab776201c266a044 SHA256 94a13c087e7a6d180b3e23815bd8d36b1ee5ac81fd31faa0f825d0395d8d6f78
 DIST xxv-1.0.tgz 1740659 RMD160 94df23da24d2dc228de542882ad84b4d69a81882 SHA1 4858a32f2b23f760a3cb902dc27d1db8f2a43f2c SHA256 8d9d2146141589da450178604121fc050e3c186dddf902d1224d013a3bd0d2cf
+EBUILD xxv-1.0.1.ebuild 4516 RMD160 8b71d035e927eed6cf0a00893a1485805df5dcb0 SHA1 533158d919a5ce099dd99ed3526e8a20adbf071a SHA256 b31e68cd930afd28d38dd3e9e9c7fd628de41d64553ee8de91fd3762d106b879
+MD5 03c0912f5551eee0b02c5f906ce67c1c xxv-1.0.1.ebuild 4516
+RMD160 8b71d035e927eed6cf0a00893a1485805df5dcb0 xxv-1.0.1.ebuild 4516
+SHA256 b31e68cd930afd28d38dd3e9e9c7fd628de41d64553ee8de91fd3762d106b879 xxv-1.0.1.ebuild 4516
 EBUILD xxv-1.0.ebuild 4512 RMD160 b089cb6f3a38d0f89df86fe4c3023dd68b08c3bd SHA1 6740a4ffd802963f9f1a9806494ae4ad6506bf14 SHA256 48be865a4041666f03056772cc57b2de01ec2348421cf03bc6bff47f431ff9ab
 MD5 cbb34e55e7ffcb0c71df7003617ad234 xxv-1.0.ebuild 4512
 RMD160 b089cb6f3a38d0f89df86fe4c3023dd68b08c3bd xxv-1.0.ebuild 4512
 SHA256 48be865a4041666f03056772cc57b2de01ec2348421cf03bc6bff47f431ff9ab xxv-1.0.ebuild 4512
-MISC ChangeLog 462 RMD160 033e325d2227b51348f0e18c7c701556813b6050 SHA1 77fcdc4c9fdfd88e80c48833865985dc020d5a82 SHA256 2c1d628f4dd004c68e02ec1e15b0c163bb60e1e8565f935932e8fa2664024e11
-MD5 54f4f087377f199116a4ce3f68e6eeef ChangeLog 462
-RMD160 033e325d2227b51348f0e18c7c701556813b6050 ChangeLog 462
-SHA256 2c1d628f4dd004c68e02ec1e15b0c163bb60e1e8565f935932e8fa2664024e11 ChangeLog 462
+MISC ChangeLog 578 RMD160 40e10046057418fa17cbabed26c0be0b551cd36c SHA1 affd531f3ff32ea46bcc0e233792beb9af2b6262 SHA256 03f33121e9a10b285a44299938748640455b39423446a8b46b73fa61ea9d9343
+MD5 cef78a1b6a413150f9526919616d9d5e ChangeLog 578
+RMD160 40e10046057418fa17cbabed26c0be0b551cd36c ChangeLog 578
+SHA256 03f33121e9a10b285a44299938748640455b39423446a8b46b73fa61ea9d9343 ChangeLog 578
 MISC metadata.xml 505 RMD160 d9f9f87054d19eb338514ec2a2420e0326cdd820 SHA1 c06a6dd13457eba71d2f85bc0a89ea7660f21a8e SHA256 48e92504e7bab6cb0434cbe74e562ec43a6250f1d530c7533a311b516179890c
 MD5 cfe09b1dfa7ae8b1caa376a6e771f2d3 metadata.xml 505
 RMD160 d9f9f87054d19eb338514ec2a2420e0326cdd820 metadata.xml 505
@@ -33,11 +38,14 @@ SHA256 48e92504e7bab6cb0434cbe74e562ec43a6250f1d530c7533a311b516179890c metadata
 MD5 9409262cdc328ac49e942fc4dc4d3ed3 files/digest-xxv-1.0 217
 RMD160 dd23a539f69d2d82a4d1fb24f185c16b1da84dc1 files/digest-xxv-1.0 217
 SHA256 1816b0280f27fbb2edc0ce02ab5c30ab5681142d305e928987402a2432a91dd0 files/digest-xxv-1.0 217
+MD5 c9e153d43be73f7e3706bbca42722562 files/digest-xxv-1.0.1 220
+RMD160 eed3a4a6cd10e88901bdd85e2bcd42269048d25f files/digest-xxv-1.0.1 220
+SHA256 656ed12e496a6c9a598eef2e28623e8ba3fb667d09b93775faf09f790584a58f files/digest-xxv-1.0.1 220
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 Comment: added by hd_brummy@gentoo.org
 
-iD8DBQFHNwfhdn07HTTCgIoRApnjAKC8PI//5CKo9fOirmVHJLJvclcwTgCeKY7K
-aF7kdqVfox+XsMh/6bU9cS4=
-=oTH2
+iD8DBQFHUuE7dn07HTTCgIoRAnyBAKCPgUE5U3jJZqM/nMayPxSvU3OrYwCePlH6
+D0E2ZBpyMQFGAYJm7s6e2m4=
+=J1hv
 -----END PGP SIGNATURE-----
