@@ -1,0 +1,3 @@
+MD5 2387aa25d1091e131479ca8f0abf9dae xxv-1.0.1.tgz 920320
+RMD160 fa71db154cb9d185e6175f21d4e2ad3fa1747cd6 xxv-1.0.1.tgz 920320
+SHA256 94a13c087e7a6d180b3e23815bd8d36b1ee5ac81fd31faa0f825d0395d8d6f78 xxv-1.0.1.tgz 920320
